# hs2048

./: Makefile  README.md  default.nix  hs-2048.nix  hs2048.cabal  stack.yaml
src/: GameModel.hs  InputModel.hs  Logic.hs  Main.hs  Rendering.hs  Touch.hs
static/: index.html  main.scss
